packages/gatsby-theme-carbon/src/components/Caption/Caption.module.scss
.caption {
  @include carbon--type-style('body-short-01');
  padding-top: $spacing-05;
  --space: 0;
}

// Responsive by default
.caption-responsive {
  // 6/8 columns
  @include carbon--breakpoint('md') {
    width: 75%;
  }

  // 6/12 columns wide
  @include carbon--breakpoint('lg') {
    width: 50%;
  }
}

// If caption is inside a user specified row then allow the grid code to set the width
:global(.#{$prefix}--row) .caption {
  width: 100%;
}

